@@ -5,6 +5,8 @@ ubiquity (2.5.12) UNRELEASED; urgency=low
 
   [ Evan Dandrea ]
   * Update translations from Launchpad.
+  * If a session indicator gconf key starts unset, make sure it ends
+    that way (LP: #684052).
 
  -- Mario Limonciello <Mario_Limonciello@Dell.com>  Thu, 20 Jan 2011 05:53:11 -0600
 
